--- a/css/reset.css
+++ b/css/reset.css
@@ -1,7 +1,6 @@
 * {
-  padding: 0px;
   margin: 0px;
-}
-body {
-  font-family: Arial;
+  padding: 0px;
+  box-sizing: border-box;
+  font-family: "Times New Roman";
 }
