--- a/css/layout.css
+++ b/css/layout.css
@@ -2,6 +2,16 @@
   margin: auto;
   padding: 0px;
 }
+.main-container {
+  font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+  border-collapse: collapse;
+  width: 80%;
+}
+table th,
+td {
+  border: 1px solid #ddd;
+  padding: 8px;
+}
 h1 {
   text-align: center;
   margin-bottom: 20px;
@@ -9,5 +19,13 @@ h1 {
 table {
   text-align: center;
   border: 1px solid;
-  width: 80%;
+}
+.main-container tr:hover {
+  background-color: #ddd;
+}
+.main-container th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  background-color: #4caf50;
+  color: white;
 }
